--- a/design.css
+++ b/design.css
@@ -5,6 +5,16 @@ html {
     padding-top: 150px;
 }
 
+body {
+    position:relative;
+    min-height:150vh;
+    margin-left: 0px;
+}
+
+img {
+    width: 550px;
+    padding-bottom: 50px;
+}
 .table {
     display: inline-block;
     align-items: center;
@@ -24,4 +34,17 @@ html {
     padding: 5px;
     border-radius: 5px;
 
+}
+
+.sub {
+    padding-top: 5px;
+}
+
+footer {
+    position:absolute;
+    bottom:0%;
+    width:100vw;
+    background-color:rgba(5, 5, 5, 0.932);
+    margin-bottom: 0px;
+    
 }
