--- a/design.css
+++ b/design.css
@@ -9,11 +9,16 @@ body {
     position:relative;
     min-height:150vh;
     margin-left: 0px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    top: 0px;
 }
 
 img {
     width: 550px;
     padding-bottom: 50px;
+    padding-top: 40px;
 }
 .table {
     display: inline-block;
@@ -44,7 +49,60 @@ footer {
     position:absolute;
     bottom:0%;
     width:100vw;
-    background-color:rgba(5, 5, 5, 0.932);
+    background-color:#343e48;
     margin-bottom: 0px;
     
 }
+
+nav
+{
+   position: fixed;
+   top: 0;
+}
+
+.navMenu {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 100px;
+    min-width: 535px;
+    background-color: #343e48;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+}
+a {
+    display: inline-block;
+    padding: 25px;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 2;
+    text-shadow: 1px 0px rgba(0, 0, 0, 0.4);
+    color: #686f77;
+    letter-spacing: .2em;
+    text-decoration: none;
+    transition: color 200ms;
+    transform-style: preserve-3d;
+    font-size: x-large;
+  }
+
+  a:hover {
+    color: #343e48;
+  }
+  /* a:after {
+    content: attr(data-title);
+    position: absolute;
+    display: block;
+    text-shadow: none;
+    top: 29%;
+    left: 18px;
+    padding: 5px 7px;
+    color: transparent;
+    background: #4795c3;
+    transform-origin: 50% 0%;
+    backface-visibility: hidden;
+    transform: translate3d(0px, 105%, 0px) rotateX(-112deg);
+    transform-style: preserve-3d;
+    transition: all 200ms ease;
+    z-index: -1;
+  } */
