--- a/design.css
+++ b/design.css
@@ -1,24 +1,30 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 html {
     background-color: grey;
     color: aliceblue;
     text-align: center;
-    padding-top: 150px;
+    height: 100%;
+    perspective: 1000px;
+    transform-style: preserver-3d;
+    font-family: lato, sans-serif;
 }
 
 body {
     position:relative;
     min-height:150vh;
-    margin-left: 0px;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    top: 0px;
+    margin: 0px;
+    /* background-color: #bad7e9; */
+    /* background: radial-gradient(closest-corner, #bad7e9 60%, rgba(186, 215, 233, 0.26)); */
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+
 }
 
 img {
     width: 550px;
     padding-bottom: 50px;
-    padding-top: 40px;
+    padding-top: 140px;
 }
 .table {
     display: inline-block;
@@ -51,58 +57,87 @@ footer {
     width:100vw;
     background-color:#343e48;
     margin-bottom: 0px;
-    
 }
 
-nav
+/* nav
 {
    position: fixed;
    top: 0;
+} */
+
+ /* Nav Menu */
+ul {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  min-width: 535px;
+  background-color: #343e48;
+  position: relative;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
 }
 
-.navMenu {
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    height: 100px;
-    min-width: 535px;
-    background-color: #343e48;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+ul:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: .5;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpiZmBg6AZiDiBWZ4YyQMCOCcYA4kMAAQYAHyYCCUdxidgAAAAASUVORK5CYII=");
 }
+
+li {
+  margin: 0 auto;
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+}
+
 a {
-    display: inline-block;
-    padding: 25px;
-    text-transform: uppercase;
-    position: relative;
-    z-index: 2;
-    text-shadow: 1px 0px rgba(0, 0, 0, 0.4);
-    color: #686f77;
-    letter-spacing: .2em;
-    text-decoration: none;
-    transition: color 200ms;
-    transform-style: preserve-3d;
-    font-size: x-large;
-  }
-
-  a:hover {
-    color: #343e48;
-  }
-  /* a:after {
-    content: attr(data-title);
-    position: absolute;
-    display: block;
-    text-shadow: none;
-    top: 29%;
-    left: 18px;
-    padding: 5px 7px;
-    color: transparent;
-    background: #4795c3;
-    transform-origin: 50% 0%;
-    backface-visibility: hidden;
-    transform: translate3d(0px, 105%, 0px) rotateX(-112deg);
-    transform-style: preserve-3d;
-    transition: all 200ms ease;
-    z-index: -1;
-  } */
+  display: block;
+  padding: 25px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  text-shadow: 1px 0px rgba(0, 0, 0, 0.4);
+  color: #686f77;
+  letter-spacing: .2em;
+  text-decoration: none;
+  transition: color 200ms;
+  transform-style: preserve-3d;
+}
+a:hover {
+  color: #343e48;
+}
+a:after {
+  content: attr(data-title);
+  position: absolute;
+  display: block;
+  text-shadow: none;
+  top: 29%;
+  left: 18px;
+  padding: 5px 7px;
+  color: transparent;
+  background: #4795c3;
+  transform-origin: 50% 0%;
+  backface-visibility: hidden;
+  transform: translate3d(0px, 105%, 0px) rotateX(-112deg);
+  transform-style: preserve-3d;
+  transition: all 200ms ease;
+  z-index: -1;
+}
+li:nth-child(2) a:after {
+  background: #ecc64b;
+}
+li:nth-child(3) a:after {
+  background: #0b9ea6;
+}
+li:nth-child(4) a:after {
+  background: #f26667;
+}
+a:hover:after {
+  transform: rotateX(0deg) translateZ(0px);
+}
