--- a/design.css
+++ b/design.css
@@ -32,7 +32,6 @@ img {
 .text_market {
     color:rgb(223, 226, 43);
     padding-top: 25px;
-    padding-bottom: 0px;
 }
 
 .final_result{
@@ -41,8 +40,9 @@ img {
     font-size: x-large;
 }
 
-.form_tab {
+/* .form_tab {
     display:inline-block;
+    position:inherit;
     background-color: #343e48;
     border-color: solid #f26667;
     height: 180px;
@@ -50,7 +50,7 @@ img {
     background-color: #555;
     padding-top: 5px;
     border-radius: 10px;
-}
+} */
 
 
 .sub {
@@ -59,8 +59,9 @@ img {
 
 footer {
     position:absolute;
+    /* display: grid; */
     bottom:0%;
-    width:100vw;
+    width:100%;
     background-color:#343e48;
     margin-bottom: 0px;
     font-family: lato, sans-serif;
