more info added

--- a/style-about.css
+++ b/style-about.css
@@ -108,7 +108,7 @@ a:hover:after {
 }
 
 .cap {
-  text-align:left;
+  text-align:center;
   background-color: #42413C2E;
   border-radius: 10px;
   padding-left: 30px;
