--- a/design.css
+++ b/design.css
@@ -3,69 +3,81 @@ html {
     background-color: grey;
     color: aliceblue;
     text-align: center;
-    height: 100%;
-    perspective: 1000px;
-    transform-style: preserver-3d;
     font-family: lato, sans-serif;
+    height: 100%;
+    width: 100%;
 }
 
 body {
     position:relative;
-    min-height:150vh;
+    /* min-height:100vh;   Does not work well on mobile */
+    min-height: 100%;
     margin: 0;
     padding: 0;
-    /* background-color: #bad7e9; */
-    /* background: radial-gradient(closest-corner, #bad7e9 60%, rgba(186, 215, 233, 0.26)); */
     width: 100%;
     height: 100%;
-    /* background-repeat: no-repeat; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Top body */
 img {
-    width: 550px;
-    padding-bottom: 50px;
-    padding-top: 140px;
+  height: auto;
+  width: 30%;
+  padding-bottom: 50px;
+  padding-top: 140px;
 }
 
 /* FORM */
 .text_market {
     color:rgb(223, 226, 43);
     padding-top: 25px;
+    padding-bottom: 10px;
 }
 
 .final_result{
-    padding-top: 0px;
-    margin-top: 0px;
+    /* padding-top: 10px; */
+    /* margin-top: 0px; */
     font-size: x-large;
 }
 
 .form_tab {
-    display:inline-block;
+    /* display:flex;
+    flex-direction:column;
     position: center;
     background-color: #343e48;
     border-color: solid #f26667;
-    height: 180px;
-    width: 580px;
     background-color: #555;
-    padding-top: 5px;
+    padding-top: 1%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 10px; */
+    display: flexbox;
+    flex-direction: column;
+    background-color: #343e48;
+    width: 250px;
+    height: 350px;
     border-radius: 10px;
+    padding-top: 10px;
+
 }
 
 .sub {
     padding-top: 5px;
 }
 
-footer {
+/* footer {
     background-color:#343e48;
-    /* margin-bottom: 0px; */
+    margin-bottom: 0px;
     font-family: lato, sans-serif;
     bottom: 0;
-    /* height: 100px; */
+    height: 100px;
     left: 0;
     position: absolute;
     width: 100%;
-}
+} */
 
  /* Nav Menu */
 ul {
@@ -74,7 +86,7 @@ ul {
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  min-width: 535px;
+  min-width: auto;
   background-color: #343e48;
   position: relative;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
@@ -142,4 +154,26 @@ li:nth-child(4) a:after {
 }
 a:hover:after {
   transform: rotateX(0deg) translateZ(0px);
+}
+
+/* Warning */
+.warning {
+  background-color: black;
+  color: #f26667;
+  width: initial;
+  padding: 10px;
+}
+
+/* FOOTER */
+
+footer {
+  height: 280px;
+  padding-top: 15px;
+  padding-left: 15px;
+  background-color:#343e48;
+  font-family: lato, sans-serif;
+  margin-top: auto;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
