--- a/style-contact.css
+++ b/style-contact.css
@@ -96,6 +96,44 @@ body {
   a:hover:after {
     transform: rotateX(0deg) translateZ(0px);
   }
+
+  /* Preloader */
+  .page-transition .div {
+    position: fixed;
+    background-color: #303030;
+    height: 100%;
+    bottom: 100%;
+    width: 25%;
+  }
+  .page-transition .div:nth-child(1) {
+    left: 0px;
+  }
+  .page-transition .div:nth-child(2) {
+    left: 25%;
+  }
+  .page-transition .div:nth-child(3) {
+    left: 50%;
+  }
+  .page-transition .div:nth-child(4) {
+    left: 75%;
+  }
+  
+  .preload {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .preload li {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+  }
+  
+  
+  
   
   /* CONTACT */
   .contact {
