--- a/style-index.css
+++ b/style-index.css
@@ -37,8 +37,8 @@ img {
 }
 
 .final_result{
-    /* padding-top: 10px; */
-    /* margin-top: 0px; */
+    padding-top: 10px;
+    margin-top: 0px;
     font-size: x-large;
 }
 
@@ -157,8 +157,8 @@ a:hover:after {
 
 footer {
   height: 280px;
-  padding-top: 15px;
-  padding-left: 15px;
+  /* padding-top: 15px;
+  padding-left: 15px; */
   background-color:#343e48;
   font-family: lato, sans-serif;
   margin-top: auto;
