--- a/style-contact.css
+++ b/style-contact.css
@@ -1,21 +1,23 @@
 html {
-    background-color: grey;
-    color: aliceblue;
-    text-align: center;
-    height: 100%;
-    font-family: lato, sans-serif;
+  background-color: grey;
+  color: aliceblue;
+  text-align: center;
+  font-family: lato, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    position:relative;
-    min-height:100vh; 
-    margin: 0;
-    padding: 0;
-    /* background-color: #bad7e9; */
-    /* background: radial-gradient(closest-corner, #bad7e9 60%, rgba(186, 215, 233, 0.26)); */
-    width: 100%;
-    height: 100%;
-    /* background-repeat: no-repeat; */
+  position:relative;
+  /* min-height:100vh;   Does not work well on mobile */
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
  /* Nav Menu */
@@ -95,6 +97,44 @@ body {
     transform: rotateX(0deg) translateZ(0px);
   }
 
+ /* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 650px;
+  margin-top: 100px;
+} 
   /* CONTACT */
   .contact {
     padding-top: 150px;
