--- a/style-about.css
+++ b/style-about.css
@@ -1,23 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 html {
-    background-color: grey;
-    color: aliceblue;
-    text-align: center;
-    height: 100%;
-    /* perspective: 1000px; */
-    font-family: lato, sans-serif;
-    min-height:100vh;
+  background-color: grey;
+  color: aliceblue;
+  text-align: center;
+  font-family: lato, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    position:relative;
-    min-height:100vh;
-    margin: 0;
-    padding: 0;
-    /* background-color: #bad7e9; */
-    /* background: radial-gradient(closest-corner, #bad7e9 60%, rgba(186, 215, 233, 0.26)); */
-    width: 100%;
-    height: 100%;
-    /* background-repeat: no-repeat; */
+  position:relative;
+  min-height:100vh;   /*Does not work well on mobile */
+  /* min-height: 100%; */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
  /* Nav Menu */
@@ -134,15 +135,18 @@ a:hover:after {
 .warning {
   background-color: black;
   color: #f26667;
+  width: initial;
+  padding: 10px;
 }
 
 /* FOOTER */
-
 footer {
-  height: 250px;
-  padding-top: 15px;
+  height: auto;
+  padding-top: 5px;
+  padding-bottom: 3px;
   padding-left: 15px;
   background-color:#343e48;
   font-family: lato, sans-serif;
   margin-top: 100px;
+  width: 100%;
 }
