--- a/style-blog.css
+++ b/style-blog.css
@@ -1,23 +1,23 @@
 html {
-    background-color: grey;
-    color: aliceblue;
-    text-align: center;
-    height: 100%;
-    perspective: 1000px;
-    transform-style: preserver-3d;
-    font-family: lato, sans-serif;
+  background-color: grey;
+  color: aliceblue;
+  text-align: center;
+  font-family: lato, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    position:relative;
-    min-height:150vh;
-    margin: 0;
-    padding: 0;
-    /* background-color: #bad7e9; */
-    /* background: radial-gradient(closest-corner, #bad7e9 60%, rgba(186, 215, 233, 0.26)); */
-    width: 100%;
-    height: 100%;
-    /* background-repeat: no-repeat; */
+  position:relative;
+  min-height:100vh;   /*Does not work well on mobile */
+  /* min-height: 100%; */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
  /* Nav Menu */
@@ -107,11 +107,9 @@ body {
   /* FOOTER */
 footer {
     background-color:#343e48;
-    /* margin-bottom: 0px; */
     font-family: lato, sans-serif;
     bottom: 0;
-    /* height: 100px; */
-    left: 0;
+    height: auto;
     position: absolute;
     width: 100%;
 }
