--- a/style-index.css
+++ b/style-index.css
@@ -43,22 +43,11 @@ img {
 }
 
 .form_tab {
-    /* display:flex;
-    flex-direction:column;
-    position: center;
-    background-color: #343e48;
-    border-color: solid #f26667;
-    background-color: #555;
-    padding-top: 1%;
-    padding-bottom: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
-    border-radius: 10px; */
     display: flexbox;
     flex-direction: column;
     background-color: #343e48;
-    width: 250px;
-    height: 350px;
+    width: 450px;
+    height: 250px;
     border-radius: 10px;
     padding-top: 10px;
 
@@ -156,7 +145,7 @@ a:hover:after {
 /* FOOTER */
 
 footer {
-  height: 280px;
+  height: auto;
   /* padding-top: 15px;
   padding-left: 15px; */
   background-color:#343e48;
