--- a/style-about.css
+++ b/style-about.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  position:relative;
+  /* position:relative; */
   min-height:100vh;   /*Does not work well on mobile */
   /* min-height: 100%; */
   margin: 0;
