--- a/style-index.css
+++ b/style-index.css
@@ -1,24 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 html {
-    background-color: grey;
-    color: aliceblue;
-    text-align: center;
-    font-family: lato, sans-serif;
-    height: 100%;
-    width: 100%;
+  background-color: grey;
+  color: aliceblue;
+  text-align: center;
+  font-family: lato, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    position:relative;
-    /* min-height:100vh;   Does not work well on mobile */
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  position:relative;
+  /* min-height:100vh;   Does not work well on mobile */
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Top body */
@@ -50,6 +50,8 @@ img {
     height: 250px;
     border-radius: 10px;
     padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
 
@@ -143,15 +145,14 @@ a:hover:after {
 }
 
 /* FOOTER */
-
 footer {
   height: auto;
-  /* padding-top: 15px;
-  padding-left: 15px; */
   background-color:#343e48;
   font-family: lato, sans-serif;
   margin-top: auto;
   position: relative;
   bottom: 0;
   width: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
