--- a/style/style-index.css
+++ b/style/style-index.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,37 +26,77 @@ img {
   height: auto;
   width: 30%;
   padding-bottom: 50px;
-  padding-top: 140px;
+  padding-top: 40px;
 }
 
 /* FORM */
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
 .text_market {
-    color:rgb(223, 226, 43);
-    padding-top: 25px;
-    padding-bottom: 10px;
+  color:rgb(223, 226, 43);
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 
 .final_result{
-    padding-top: 10px;
-    margin-top: 0px;
-    font-size: x-large;
+  padding-top: 10px;
+  /* margin-top: 0px; */
+  font-size: x-large;
 }
 
 .form_tab {
-    display: flexbox;
-    flex-direction: column;
-    background-color: #343e48;
-    width: 450px;
-    height: 250px;
-    border-radius: 10px;
-    padding-top: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #343e48;
+  width: 480px;
+  height: 360px;
+  border-radius: 10px;
+  padding-top: 10px;
+  /* margin-top: 10px;
+  margin-bottom: 10px; */
 
 }
 
 .sub {
-    padding-top: 5px;
+  padding-top: 5px;
+}
+
+.buttons {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  width: 140px;
+}
+
+.buton {
+  border-radius: 10px;
+  height: 25px;
+  width: 250px;
+  cursor: pointer;
+}
+
+.buton:hover {
+  background-color: #52c96af7;
+  color: white;
+
+}
+
+.low {
+  width: 50%;
+}
+
+.info-text {
+  width: max-content;
+  color: greenyellow;
 }
 
  /* Nav Menu */
