--- a/style/style-index.css
+++ b/style/style-index.css
@@ -56,7 +56,7 @@ img {
   align-items: center;
   background-color: #343e48;
   width: 480px;
-  height: 360px;
+  height: 370px;
   border-radius: 10px;
   padding-top: 10px;
   /* margin-top: 10px;
@@ -78,10 +78,12 @@ img {
 }
 
 .buton {
-  border-radius: 10px;
+  border-radius: 5px;
   height: 25px;
   width: 250px;
   cursor: pointer;
+  font-size: 17px;
+  padding: 2px;
 }
 
 .buton:hover {
@@ -92,11 +94,12 @@ img {
 
 .low {
   width: 50%;
+  height: max-content;
 }
 
 .info-text {
   width: max-content;
-  color: greenyellow;
+  color: paleturquoise;
 }
 
  /* Nav Menu */
@@ -182,6 +185,7 @@ a:hover:after {
   color: #f26667;
   width: initial;
   padding: 10px;
+  margin-top: 125px;
 }
 
 /* FOOTER */
