About page visual improv

--- a/style/style-about.css
+++ b/style/style-about.css
@@ -129,8 +129,12 @@ a:hover:after {
 
 .info-tab {
     padding-top: 50px;
+    color:midnightblue;
 }
 
+.title-text {
+  color:midnightblue;
+}
 /* Warning */
 .warning {
   background-color: black;
