CSS Needs to be improved Fixes #3

--- a/style/style-index.css
+++ b/style/style-index.css
@@ -1,4 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,400);
+
+/* :root {
+  --color-pear: #DFE22B;
+  --color-limed-spruce: #343E48;
+  --color-blizzard-blue: #AFEEEE;
+  --color-gray: #808080;
+}; */
+
+
 html {
   background-color: grey;
   color: aliceblue;
@@ -29,8 +38,6 @@ img {
   padding-top: 40px;
 }
 
-/* FORM */
-
 .box {
   display: flex;
   flex-direction: column;
@@ -38,15 +45,21 @@ img {
   gap: 15px;
 }
 
+/* FORM */
+
+
 .text_market {
-  color:rgb(223, 226, 43);
+  color: yellow;
   padding-top: 25px;
   padding-bottom: 10px;
+  border: 2px solid red;
 }
 
 .final_result{
   padding-top: 10px;
   font-size: x-large;
+  color: #f26667;
+  border: 2px solid red;
 }
 
 .form_tab {
@@ -58,12 +71,15 @@ img {
   height: 370px;
   border-radius: 10px;
   padding-top: 10px;
-
+  border: 2px solid red;
+  content: "FORM TABBBBBBBBBBBBBBBBBBBBBB";
 }
 
 .sub {
   padding-top: 5px;
 }
+
+/* START of button */
 
 .buttons {
   cursor: pointer;
@@ -84,10 +100,11 @@ img {
 }
 
 .button:hover {
-  background-color: #52c96af7;
+  background-color: rgba(82, 201, 106, 0.969);
   color: white;
-
 }
+
+/* END of Button */
 
 .low {
   width: 50%;
@@ -96,7 +113,7 @@ img {
 
 .info-text {
   width: max-content;
-  color: paleturquoise;
+  color: #afeeee;
 }
 
  /* Nav Menu */
