--- a/style/general.css
+++ b/style/general.css
@@ -19,9 +19,7 @@ body {
   align-items: center;
 }
 
-img {
-  height: auto;
-  width: 30%;
+.responsive {
   padding-bottom: 50px;
   padding-top: 40px;
 }
@@ -270,4 +268,12 @@ footer {
   width: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+/* Mobile */
+@media screen and (max-width: 768px) {
+  .responsive {
+    width: 100%;
+    height: auto;
+  }
 }/*# sourceMappingURL=general.css.map */
