--- a/style/style-about.css
+++ b/style/style-about.css
@@ -25,10 +25,9 @@ body {
 ul {
   display: block;
   text-align: center;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
-  min-width: 535px;
   background-color: #343e48;
   position: relative;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
