--- a/style/general.css
+++ b/style/general.css
@@ -1,19 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 html {
   background-color: rgb(98, 96, 96);
-  color: aliceblue;
-  text-align: center;
-  font-family: lato, sans-serif;
   height: 100%;
   width: 100%;
+  margin: 0;
 }
 
 body {
-  position: relative;
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+  text-align: center;
+  color: aliceblue;
+  font-family: lato, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -255,6 +251,7 @@ a:hover:after {
   width: initial;
   padding: 10px;
   margin-top: 125px;
+  margin-bottom: 30px;
 }
 
 /* FOOTER */
@@ -262,12 +259,9 @@ footer {
   height: auto;
   background-color: #343e48;
   font-family: lato, sans-serif;
-  margin-top: auto;
-  position: relative;
-  bottom: 0;
   width: 100%;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 /* Mobile */
