--- a/style/style-about.css
+++ b/style/style-about.css
@@ -1,21 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,400);
-html {
-  background-color: grey;
-  color: aliceblue;
-  text-align: center;
-  font-family: lato, sans-serif;
-  height: 100%;
-  width: 100%;
+
+* {
+  margin: 0;
 }
 
 body {
-  /* position:relative; */
-  min-height:100vh;   /*Does not work well on mobile */
-  /* min-height: 100%; */
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  background-color: grey;
+  font-family: lato, sans-serif;
+  color: aliceblue;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -115,17 +108,12 @@ a:hover:after {
   text-align:center;
   background-color: #42413C2E;
   border-radius: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding: 5px 30px 5px 30px;
   margin: 4px;
   
 }
 
-
 /* INFO TAB */
-
 .info-tab {
     padding-top: 50px;
     color:midnightblue;
@@ -134,22 +122,22 @@ a:hover:after {
 .title-text {
   color:midnightblue;
 }
+
 /* Warning */
 .warning {
   background-color: black;
   color: #f26667;
   width: initial;
   padding: 10px;
+  margin: 25px 0px 35px 0px;
 }
 
 /* FOOTER */
 footer {
   height: auto;
-  padding-top: 5px;
-  padding-bottom: 3px;
-  padding-left: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color:#343e48;
   font-family: lato, sans-serif;
-  margin-top: 100px;
   width: 100%;
 }
