--- a/style/style-blog.css
+++ b/style/style-blog.css
@@ -1,18 +1,10 @@
-html {
-  background-color: grey;
-  height: 100%;
-  width: 100%;
+
+* {
+  margin: 0;
 }
 
-
 body {
-  position:relative;
-  /* min-height:100vh; */
-  /* min-height: 100%; */
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  background-color: grey;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,7 +18,6 @@ ul {
     margin: 0;
     padding: 0;
     width: 100%;
-    /* min-width: 535px; */
     background-color: #343e48;
     position: relative;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
@@ -118,6 +109,6 @@ footer {
     width: 100%;
     color: aliceblue;
     text-align: center;
-    margin: 0;
+    padding:  15px 0px 15px 0px;;
 }
 
