--- a/style/style-contact.css
+++ b/style/style-contact.css
@@ -1,23 +1,13 @@
-html {
-  background-color: grey;
-  color: aliceblue;
-  text-align: center;
-  font-family: lato, sans-serif;
-  height: 100%;
-  width: 100%;
+* {
+  margin: 0;
 }
 
 body {
-  position:relative;
-  /* min-height:100vh;   Does not work well on mobile */
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  font-family: lato, sans-serif;
+  text-align: center;
+  background-color: grey;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
  /* Nav Menu */
@@ -153,9 +143,11 @@ footer {
   background-color:#343e48;
   font-family: lato, sans-serif;
   margin-top: auto;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
+  color: aliceblue;
+  padding: 15px 0px 15px 0px;
 }
 
 .donations {
