--- a/style/style-about.css
+++ b/style/style-about.css
@@ -14,7 +14,11 @@ body {
   align-items: center;
 }
 
- /* Nav Menu */
+.container {
+  width: 60%;
+}
+
+/* Nav Menu */
 ul {
   display: block;
   text-align: center;
@@ -33,7 +37,7 @@ ul:after {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: .5;
+  opacity: 0.5;
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpiZmBg6AZiDiBWZ4YyQMCOCcYA4kMAAQYAHyYCCUdxidgAAAAASUVORK5CYII=");
 }
 
@@ -52,7 +56,7 @@ a {
   z-index: 2;
   text-shadow: 1px 0px rgba(0, 0, 0, 0.4);
   color: #686f77;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   text-decoration: none;
   transition: color 200ms;
   transform-style: preserve-3d;
@@ -97,7 +101,7 @@ a:hover:after {
 
 /* INFO CARDANO */
 .cardano {
-  color: yellowgreen
+  color: yellowgreen;
 }
 
 .price_color {
@@ -105,22 +109,26 @@ a:hover:after {
 }
 
 .cap {
-  text-align:center;
-  background-color: #42413C2E;
+  text-align: center;
+  background-color: #42413c2e;
   border-radius: 10px;
   padding: 5px 30px 5px 30px;
   margin: 4px;
-  
 }
 
 /* INFO TAB */
 .info-tab {
-    padding-top: 50px;
-    color:midnightblue;
+  padding-top: 50px;
+  color: midnightblue;
 }
 
 .title-text {
-  color:midnightblue;
+  color: midnightblue;
+}
+
+.magic {
+  /* border: 1px solid black; */
+  /* box-shadow: 0px 0px 5px darkgray; */
 }
 
 /* Warning */
@@ -137,7 +145,19 @@ footer {
   height: auto;
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color:#343e48;
+  background-color: #343e48;
   font-family: lato, sans-serif;
   width: 100%;
+}
+
+@media screen and (max-width: 2000px) {
+  .container {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 95%;
+  }
 }
